--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -205,7 +205,7 @@
                 .forEach(item => {
                     const optionArabic = document.createElement("option");
                     optionArabic.value = item.Id;
-                    optionArabic.textContent = item.ItemName;
+                    optionArabic.textContent = item.ItemNameAr || item.ItemName; // fallback
                     optionArabic.dataset.id = item.ItemId;
                     optionArabic.dataset.code = item.ItemCode;
                     optionArabic.dataset.description = item.ItemDescription;
@@ -214,7 +214,17 @@
                     optionArabic.dataset.risk = item.HazardTypeName || "";
                     optionArabic.dataset.asset = item.TypeOfAsset || "";
 
-                    const optionEnglish = optionArabic.cloneNode(true);
+                    // English Option
+                    const optionEnglish = document.createElement("option");
+                    optionEnglish.value = item.Id;
+                    optionEnglish.textContent = item.ItemName || '[No English Name]'; // fallback
+                    optionEnglish.dataset.id = item.ItemId;
+                    optionEnglish.dataset.code = item.ItemCode;
+                    optionEnglish.dataset.description = item.ItemDescription;
+                    optionEnglish.dataset.chemical = item.Chemical;
+                    optionEnglish.dataset.unit = item.UnitOfmeasure;
+                    optionEnglish.dataset.risk = item.HazardTypeName || "";
+                    optionEnglish.dataset.asset = item.TypeOfAsset || "";
 
                     itemSelect.appendChild(optionArabic);
                     itemSelectEnglish.appendChild(optionEnglish);
@@ -471,7 +481,7 @@
                                                                     data-risk="@item.HazardTypeName"
                                                                     data-unit="@item.UnitOfmeasure"
                                                                     selected="@(Model.ItemsForReport[i].ItemCardId == item.Id ? "selected" : null)">
-                                                                @item.ItemName
+                                                                @item.ItemNameAr
                                                             </option>
                                                         }
                                                     
