--- a/Pages/AddItem.cshtml
+++ b/Pages/AddItem.cshtml
@@ -193,7 +193,7 @@
                             </div>
                             <div class="mb-4">
                                 <label class="my-1 me-2" for="GroupCode">@Model.lblGroupName</label>
-                                <select class="form-select" id="GroupCode" name="GroupCode"
+                                <select class="form-select" id="GroupCodeOld" name="GroupCode"
                                     aria-label="Default select example">
 
                                     @if (Model.ItemGroups != null)
